--- a/VRChat/66/1047666.html
+++ b/VRChat/66/1047666.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "k3yPwXaOCiNelItXkaACNbkPzN1AxxsLwG+NQQm+agg="></script>
+    "574khZwVijLJLTRUt4eF+++ORWM55iIh3EJFKmd+yyk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"キョンシーの帽子","description":"現バージョン　ver1.01\n※アップデートしました　\n　てっぺんにある球体が雑だったので手を加えました。\n　もしかしたら好みがあるかもしれないので旧バージョンも入　れておきます。\n\nキョンシーが付けている帽子です。\n\nお札については版権などがややこしそうなので真っ白です。\n好きな言葉を書いて使ってください。\n\n主にVRchatでの使用を想定した3Dモデルです。\nそれ以外の用途でもご利用いただけます。\n\n・内容物\n\nポリゴン数ギリギリで生きてる人用とポリゴン数余りまくってる人用の2つがあります。\n\n新・余ってる人用：ポリゴン数/816　画像1枚目・2枚目←何故か減った\n旧・余ってる人用：ポリゴン数/1382　画像5枚目・6枚目\n\n新・ギリギリの人用：ポリゴン数/250　画像3枚目・4枚目\n旧・ギリギリの人用：ポリゴン数/198　画像7枚目・8枚目\n","url":"https://booth.pm/ja/items/1047666","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/fcf0d975-c982-4865-beba-1cd6e5c30f4a/i/1047666/2d6fe4db-0936-4649-9239-dec4c96be6e0_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="k3yPwXaOCiNelItXkaACNbkPzN1AxxsLwG+NQQm+agg="></script>
+    nonce="574khZwVijLJLTRUt4eF+++ORWM55iIh3EJFKmd+yyk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -504,9 +504,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
