--- a/VRChat/26/1046626.html
+++ b/VRChat/26/1046626.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "LMpDizK2WP2+lEnY8BVWYeBSaNz474rLOeeXj/pc7YA="></script>
+    "Ram8FjFxIbdRS4PNWklujV7c81tHqCpB49mF8OmEivM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"魔女帽子","description":"VRchatのアバター向けに作成した魔女っぽい先が折れたとんがり帽子です\n\nポリゴン数は761、unitypackageとしてお配りします。\nマテリアルやシェーダーも設定済み。\n頭のボーンにいれて位置とサイズを調整すれば\nそのままアップロードできるようにしています。\n\n利用規約\nまた、MITライセンス・CC0 1.0とします。\n改変・有料配信・VRChatでの利用・同人ゲームへの組込みなども問題ありません。\nご自由にお使いください。\n\nシェーダーはMToonを設定していますが、お好きなものをお使いください。\nOutlineの設定できるシェーダーだと、ふちが見えやすいかな？\n","url":"https://booth.pm/ja/items/1046626","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8b6fede7-f411-4e95-9ac2-49e320f512a7/i/1046626/e0bd3080-460f-4e5b-ae71-151f68390986_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LMpDizK2WP2+lEnY8BVWYeBSaNz474rLOeeXj/pc7YA="></script>
+    nonce="Ram8FjFxIbdRS4PNWklujV7c81tHqCpB49mF8OmEivM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -345,9 +345,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
