--- a/VRChat/29/1040829.html
+++ b/VRChat/29/1040829.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "mMkV5SkLgGCbEygvNr89MS5vh5kNN8T3VlAk8VGhJq8="></script>
+    "MgEVE8X81kCRCIcoVU8NpT4QdJ9JzzcXnVsJFv5YbBw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け武器】ハルバード","description":"MagicaVoxelで作った「ハルバード」です！\n\n基本的にVRChatでの使用を想定しています。\nアバターに持たせて使う大型の武器をイメージして作りました。\n\n【内容物】\n・Halberd.unitypackage\n・モデル(fbx/obj※)\n・Readme.tex\n・導入説明画像.png\n・大きさ調整.png\n※blender向けにobjファイルを同梱しています。\n※voxファイルは同梱しておりません。\n\n【利用規約】\n◇やっていいこと◇\n〇改変可\n〇商用利用※(ここではVtuber等の利益の発生する配信や動画を指す)\n〇パーツ流用可\n〇アバターペデスタルを用いた配布可\n〇VRChat以外のゲーム、アプリ、ソフト等での使用可\n\n◇やってはだめなこと◇\n×再配布\n×本データを無断で有料販売または配布\n\n【導入方法】\nzipファイルを解凍後、UnityPackageをUnity上にドラッグ＆ドロップ、もしくはImportPackageからUnityPackageを直接指定してください。\n\n【お問い合わせ】\nTwitter:@zuihoucha","url":"https://booth.pm/ja/items/1040829","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/da4e30e9-04a4-47e9-a425-ac59c0d6a53d/i/1040829/956003cb-3948-410d-9576-9e0d8650a990_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mMkV5SkLgGCbEygvNr89MS5vh5kNN8T3VlAk8VGhJq8="></script>
+    nonce="MgEVE8X81kCRCIcoVU8NpT4QdJ9JzzcXnVsJFv5YbBw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -379,9 +379,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
