--- a/VRChat/31/1041431.html
+++ b/VRChat/31/1041431.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8/A/ysg/AEK+wDxvVb3/nWRbD2kbgBH9nxTQeypzvlU="></script>
+    "/NK0jaa/jKivqQQd4yjiDQauJFUi/Sl6lqki1Ebkqbo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サングラス(鼻眼鏡)","description":"マトリックスのモーフィアス風サングラスです。鼻メガネなのでテンプルがありません。レンズに反射するようになっています。フレンドからも見えますよ。\nhow toフォルダを参考に設定するとサムネイルのようなサングラスを使えます。\nレンズ部分の透け具合はシェーダーの色で調節してください。\nお使いのモデルに合わない場合は、拡縮したり改変したりして利用してください。\n\n352三角\n\nhow to/\nnose glasses.unitypackage\nlicense\nshader.txt\n\n購入の前にライセンスを読んでください。→ https://www.yukiyukivirtual.net/license/#1.md","url":"https://booth.pm/ja/items/1041431","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"200"},"image":"https://booth.pximg.net/c/620x620/cdb02673-8664-4200-9407-c3c4df48aa2c/i/1041431/34d6b132-1bd8-4c0e-b06b-3714e25cc0c2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8/A/ysg/AEK+wDxvVb3/nWRbD2kbgBH9nxTQeypzvlU="></script>
+    nonce="/NK0jaa/jKivqQQd4yjiDQauJFUi/Sl6lqki1Ebkqbo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -529,9 +529,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
