--- a/VRChat/14/1041314.html
+++ b/VRChat/14/1041314.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Sp5Wn2ppUNU1nKxHWzbpJlEuOjiXS7LR8L3OmyubX3A="></script>
+    "ZXv/qZJaS8WNmWm5hi3W/77FjARTQNVgrsNzdZQMGvw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChatオリジナルアバター】いたずらメルヴィー ver3.1.0 Avatars3.0版【MDollnail対応】","description":"※当モデルの最終更新日は2021/10/31です。それ以降にリリースされた独自機能（VCC等）には現状非対応であり、アップロードマニュアル等も更新できておりません。\n※当モデルは、現状、PhysBones3非対応です※\n\n\nポリゴン数…～△20377\nVRChatでの利用を想定したUnity Humanoidモデルです。（Quest非対応）\n当モデルはDynamic Boneに対応しています。\n\n\n【利用規約】\n同梱のインターネットショートカット、もしくは下記URLよりMinuet_Doll3Dモデル利用規約に従ってください。\nhttp://minuetdoll.info/3d/　　　　　　（日本語）\nhttp://minuetdoll.info/3d/english.htm　(English)\n\n当モデルのネイル部分には、私Minuet_DollがBOOTHにて販売中の\n汎用ジェルネイル『MDollnail』（#MD_nail）のメッシュ・テクスチャを利用しています。\nhttps://minuetdoll.booth.pm/items/3114352\n\n\n【アップロード方法・その他仕様】\n同梱のインターネットショートカット、もしくは下記URLよりアップロードの手引きをご覧ください。\nhttps://minuetdoll.info/manual/Mervi_Avatars3.0_manual/\n\nVRChatやUnityのアップデートの影響で従来通りアップロードできなくなった場合は、下記URLをご確認ください。\nhttps://note.com/minuet_doll/n/ne16c3ea79548\n\n\n【シェーダーについて】\n各ライセンスに基づき使用させて頂いております。詳しくは同梱の各テキストファイル（Readme）をご覧ください。\n\n・ユニティ・テクノロジーズ・ジャパン合同会社様の「ユニティちゃんトゥーンシェーダー Ver.2.0.8」\nhttp://unity-chan.com/download/releaseNote.php?id=UTS2_0\n\n\n【内容】\n\nMD_Mervi_ver3.1.0_Avatars3.0\n├ license（テキスト版利用規約及び同梱させて頂いたシェーダー、その他ツールのライセンス）\n├ VRM（VRM化したモデルが入っています）\n｜ Minuet_Doll 3D Model Terms(Online_Japanese)（ご利用の際は最新の利用規約をご覧ください）\n｜ Minuet_Doll 3D Model Terms(English)（上記利用規約の英語版です）\n｜ Readme.txt（このファイル）\n｜ Upload Manual（モデルアップロードの際にはご活用ください）\n└ MD_Mervi_ver3.1.0.unitypackage（本体）\n\n\n【更新履歴】\n2021/10/31  ver3.1.0 Avatars3.0に対応しました。MDollnail対応になりました。\n2018/12/27　ver1.2　足の捻じれを修正しました。モデルの一部が消える不具合を修正しました。\n2018/12/12　ver1.1　Unity2017.4に対応しました。フルトラッキングに対応しました。スケールの追加をしました。足首の構造を修正しました。\n2018/10/08　ver1.0　販売開始\n\n\n【制作】\nMinuet_Doll\nhttp://minuetdoll.info/\nhttps://twitter.com/Minuet_Doll\nhttps://minuetdoll.fanbox.cc/","url":"https://booth.pm/ja/items/1041314","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/da3e4894-0b83-47ed-b0a9-5526bd9f9722/i/1041314/b849c15b-35a2-4524-96cb-ba6d91a5991a_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Sp5Wn2ppUNU1nKxHWzbpJlEuOjiXS7LR8L3OmyubX3A="></script>
+    nonce="ZXv/qZJaS8WNmWm5hi3W/77FjARTQNVgrsNzdZQMGvw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -504,9 +504,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
