--- a/VRChat/64/1040864.html
+++ b/VRChat/64/1040864.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "mlHuKGu+xsZIABt2aoao8cWu7C3Ti7mbCNR0gtV8138="></script>
+    "Iprfvgb3REh/KoQHqNf0JUgJqVvQ190y8uU+7SgHDk4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ばたふらいないふ（動く）","description":"ガバガバアニメーションが入っているので出す・しまう・カチャカチャする、ができます。","url":"https://booth.pm/ja/items/1040864","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1040864/1e7c6adf-35b5-4be5-ab7f-4c0a47442bd3_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mlHuKGu+xsZIABt2aoao8cWu7C3Ti7mbCNR0gtV8138="></script>
+    nonce="Iprfvgb3REh/KoQHqNf0JUgJqVvQ190y8uU+7SgHDk4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -334,9 +334,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
